--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,10 @@ body {
 #thirdRowBox2 {
     background-color: lightblue;
 }
+
+.jewelImages {
+    border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 110px;
+}
