Adjusted JS and HTML files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body {
 
 #thirdRowBox {
     background-color: rgb(74, 197, 156);
+    text-align: center;
+    font-size: 30px;
 }
 
 #thirdRowBox2 {
