--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,29 +35,21 @@ h2 {
 }
 
 #thirdRowBox {
-    background-color: rgb(74, 197, 156);
-    text-align: center;
-    font-size: 30px;
-    width: 50px;
-    height: 70px;
+    color: white;
 }
 
 #yourTotal {
-    background-color: rgb(74, 197, 156);
-    text-align: center;
-    font-size: 15px;
-    width: 50px;
-    height: 20px;
-    margin-bottom: 15px;
+    color: white;
 }
 
-#playerScore {
+
+/* #playerScore {
     background-color: rgb(74, 197, 156);
     text-align: center;
     font-size: 15px;
     width: 50px;
     height: 70px;
-}
+} */
 
 #thirdRowBox2 {
     background-color: lightblue;
@@ -76,10 +68,4 @@ h2 {
 
 #status {
     color: white;
-    font-size: 50px;
-    background-color: rgb(74, 197, 156);
-    text-align: center;
-    font-size: 15px;
-    width: 100px;
-    height: 70px;
 }
